--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,10 @@ li{
     padding-right: 25px;
 }
 
+p.cursive{
+	font-family: cursive;
+}
+
 footer{
     padding-left: 25px;
     padding-bottom: 25px;
